// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interface should add suites to root 1`] = `
Suite {
  "children": Array [
    Suite {
      "children": Array [],
      "description": "test 2",
      "parent": [Circular],
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": 4,
      },
      "skip": false,
      "type": "suite",
      Symbol(isRunnable): true,
    },
  ],
  "description": "root",
  "parent": null,
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": 4,
  },
  "skip": false,
  "type": "suite",
  Symbol(isRunnable): true,
  Symbol(isRoot): true,
}
`;

exports[`Interface should create skipped tests inside of suites 1`] = `
Test {
  "description": "child 1",
  "fn": [Function],
  "parent": Suite {
    "children": Array [
      [Circular],
    ],
    "description": "test 5",
    "parent": Suite {
      "children": Array [
        [Circular],
      ],
      "description": "root",
      "parent": null,
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": 4,
      },
      "skip": false,
      "type": "suite",
      Symbol(isRunnable): true,
      Symbol(isRoot): true,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": 4,
    },
    "skip": true,
    "type": "suite",
    Symbol(isRunnable): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": 4,
  },
  "skip": true,
  "type": "test",
  Symbol(isRunnable): true,
}
`;

exports[`Interface should create suites 1`] = `
Suite {
  "children": Array [],
  "description": "test 1",
  "parent": Suite {
    "children": Array [
      [Circular],
    ],
    "description": "root",
    "parent": null,
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": 4,
    },
    "skip": false,
    "type": "suite",
    Symbol(isRunnable): true,
    Symbol(isRoot): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": 4,
  },
  "skip": false,
  "type": "suite",
  Symbol(isRunnable): true,
}
`;

exports[`Interface should create tests inside of suites 1`] = `
Test {
  "description": "child 1",
  "fn": [Function],
  "parent": Suite {
    "children": Array [
      [Circular],
    ],
    "description": "test 4",
    "parent": Suite {
      "children": Array [
        [Circular],
      ],
      "description": "root",
      "parent": null,
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": 4,
      },
      "skip": false,
      "type": "suite",
      Symbol(isRunnable): true,
      Symbol(isRoot): true,
    },
    "result": Result {
      "internalMessages": Array [],
      "internalStatus": 4,
    },
    "skip": true,
    "type": "suite",
    Symbol(isRunnable): true,
  },
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": 4,
  },
  "skip": false,
  "type": "test",
  Symbol(isRunnable): true,
}
`;

exports[`Interface should handle nested suites 1`] = `
Suite {
  "children": Array [
    Suite {
      "children": Array [
        Test {
          "description": "test 1",
          "fn": [Function],
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": false,
          "type": "test",
          Symbol(isRunnable): true,
        },
        Test {
          "description": "test 2",
          "fn": [Function],
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": false,
          "type": "test",
          Symbol(isRunnable): true,
        },
        Suite {
          "children": Array [
            Test {
              "description": "test 1",
              "fn": [Function],
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": 4,
              },
              "skip": false,
              "type": "test",
              Symbol(isRunnable): true,
            },
            Test {
              "description": "test 2",
              "fn": [Function],
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": 4,
              },
              "skip": false,
              "type": "test",
              Symbol(isRunnable): true,
            },
          ],
          "description": "component 1",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": false,
          "type": "suite",
          Symbol(isRunnable): true,
        },
        Suite {
          "children": Array [
            Test {
              "description": "test 1",
              "fn": [Function],
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": 4,
              },
              "skip": false,
              "type": "test",
              Symbol(isRunnable): true,
            },
            Test {
              "description": "test 2",
              "fn": [Function],
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": 4,
              },
              "skip": false,
              "type": "test",
              Symbol(isRunnable): true,
            },
            Suite {
              "children": Array [
                Test {
                  "description": "test 1",
                  "fn": [Function],
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": 4,
                  },
                  "skip": false,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
                Test {
                  "description": "test 2",
                  "fn": [Function],
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": 4,
                  },
                  "skip": false,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
              ],
              "description": "method 1",
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": 4,
              },
              "skip": false,
              "type": "suite",
              Symbol(isRunnable): true,
            },
            Suite {
              "children": Array [
                Test {
                  "description": "test 1",
                  "fn": [Function],
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": 4,
                  },
                  "skip": false,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
                Test {
                  "description": "test 2",
                  "fn": [Function],
                  "parent": [Circular],
                  "result": Result {
                    "internalMessages": Array [],
                    "internalStatus": 4,
                  },
                  "skip": false,
                  "type": "test",
                  Symbol(isRunnable): true,
                },
              ],
              "description": "method 2",
              "parent": [Circular],
              "result": Result {
                "internalMessages": Array [],
                "internalStatus": 4,
              },
              "skip": false,
              "type": "suite",
              Symbol(isRunnable): true,
            },
          ],
          "description": "component 2",
          "parent": [Circular],
          "result": Result {
            "internalMessages": Array [],
            "internalStatus": 4,
          },
          "skip": false,
          "type": "suite",
          Symbol(isRunnable): true,
        },
      ],
      "description": "module",
      "parent": [Circular],
      "result": Result {
        "internalMessages": Array [],
        "internalStatus": 4,
      },
      "skip": false,
      "type": "suite",
      Symbol(isRunnable): true,
    },
  ],
  "description": "root",
  "parent": null,
  "result": Result {
    "internalMessages": Array [],
    "internalStatus": 4,
  },
  "skip": false,
  "type": "suite",
  Symbol(isRunnable): true,
  Symbol(isRoot): true,
}
`;
